--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -53,11 +53,11 @@
             <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a></p></td>
           </tr>
           <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Jane' }} {{ data['last-name'] or 'Wilson' }}</th>
+            <th scope="row" class="govuk-table__header">{{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}</th>
             <td class="govuk-table__cell">
-              {{ data['email-address'] or 'janewilson@email.com' }}
+              {{ data['email-address-person-1'] or 'janewilson@email.com' }}
               <br>
-              {{ data['mobile-phone-number'] or '+44663271472' }}
+              {{ data['mobile-phone-number-person-1'] or '+44663271472' }}
             </td>
             <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a></p></td>
           </tr>
