--- a/app/views/antigen/v2/global-registration/when-did-symptoms-start-person-1-error.html
+++ b/app/views/antigen/v2/global-registration/when-did-symptoms-start-person-1-error.html
@@ -15,7 +15,7 @@
   </p>
 </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/do-you-have-symptoms">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/do-you-have-symptoms-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -54,56 +54,56 @@
 
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="21 April 2021" {{ checked("date-of-onset", "21 April 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-1">
+                <input class="govuk-radios__input" id="date-of-onset-1-person-1" name="date-of-onset-person-1" type="radio" value="21 April 2021" {{ checked("date-of-onset-person-1", "21 April 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-1-person-1">
                   Wednesday, 21 April 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="20 April 2021" {{ checked("date-of-onset", "20 April 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-2">
+                <input class="govuk-radios__input" id="date-of-onset-2-person-1" name="date-of-onset-person-1" type="radio" value="20 April 2021" {{ checked("date-of-onset-person-1", "20 April 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-2-person-1">
                   Tuesday, 20 April 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="19 April 2021" {{ checked("date-of-onset", "19 April 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-3">
+                <input class="govuk-radios__input" id="date-of-onset-3-person-1" name="date-of-onset-person-1" type="radio" value="19 April 2021" {{ checked("date-of-onset-person-1", "19 April 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-3-person-1">
                   Monday, 19 April 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="18 April 2021" {{ checked("date-of-onset", "18 April 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-4">
+              <input class="govuk-radios__input" id="date-of-onset-4-person-1" name="date-of-onset-person-1" type="radio" value="18 April 2021" {{ checked("date-of-onset-person-1", "18 April 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-4-person-1">
                 Sunday, 18 April 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="17 April 2021" {{ checked("date-of-onset", "17 April 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-5">
+              <input class="govuk-radios__input" id="date-of-onset-5-person-1" name="date-of-onset-person-1" type="radio" value="17 April 2021" {{ checked("date-of-onset-person-1", "17 April 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-5-person-1">
                 Saturday, 17 April 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="16 April 2021" {{ checked("date-of-onset", "16 April 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-6">
+              <input class="govuk-radios__input" id="date-of-onset-6-person-1" name="date-of-onset-person-1" type="radio" value="16 April 2021" {{ checked("date-of-onset-person-1", "16 April 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-6-person-1">
                 Friday, 16 April 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="15 April 2021" {{ checked("date-of-onset", "15 April 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-7">
+              <input class="govuk-radios__input" id="date-of-onset-7-person-1" name="date-of-onset-person-1" type="radio" value="15 April 2021" {{ checked("date-of-onset-person-1", "15 April 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-7-person-1">
                 Thursday, 15 April 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="14 April 2021" {{ checked("date-of-onset", "14 April 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-8">
+              <input class="govuk-radios__input" id="date-of-onset-8-person-1" name="date-of-onset-person-1" type="radio" value="14 April 2021" {{ checked("date-of-onset-person-1", "14 April 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-8-person-1">
                 Thursday, 14 April 2021
               </label>
             </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-person-1-9" name="date-of-onset-person-1" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset-person-1", "different") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-9">
+                <input class="govuk-radios__input" id="date-of-onset-9-person-1" name="date-of-onset-person-1" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset-person-1", "different") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-9-person-1">
                   Before 14 April 2021
                 </label>
               </div>
