--- a/app/views/lamp-test-return/v1/location-code.html
+++ b/app/views/lamp-test-return/v1/location-code.html
@@ -56,14 +56,14 @@
 
           <div class="govuk-form-group govuk-!-margin-top-4">
             <label class="govuk-label" for="lot-reference-1">
-              LOT reference
+              Location code
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="location-code-1" name="location-code-1" type="text" value={{ data['location-code-1'] }}>
           </div>
 
           <div class="govuk-form-group">
             <label class="govuk-label" for="location-code-1-confirm">
-              Confirm LOT reference
+              Confirm location code
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="location-code-1-confirm" name="location-code-1-confirm" type="text" value={{ data['location-code-1-confirm'] }}>
           </div>
